# two_wheel_robot

./: CMakeLists.txt  Dockerfile  FILE_PLACEMENT_GUIDE.txt  README.md  TROUBLESHOOTING.md  create_workspace.sh  install_dependencies.sh  package.xml  quick_start.sh  setup_and_run.sh  simple_setup_script.sh
config/: robot_view.rviz
launch/: robot_simulation.launch.py  visualize_graph.launch.py  web_visualization.launch.py
scripts/: robot_dashboard.py
src/: autonomous_navigator.cpp  robot_monitor.cpp
urdf/: two_wheel_robot.urdf.xacro
worlds/: simple_world.world
